# delineator

./: .coverage  .gitignore  .last-branch  CLAUDE.md  README.md  config.py  delineate.py  download_data.py  main.py  prompt.md  pyproject.toml  ralph.sh
.claude/agents/: test-writer.md
.claude/commands/: prd.md
archive/: delineator-api-spec.md
archive/2026-01-19-delineator-api/: prd-watershed-export.md
archive/2026-01-21-watershed-export/: prd-virtual-gauges-integration.md
cache/: watersheds.db
doc/: codebase_overview.md
examples/: camels_us.toml  delineate.toml
py/: fast_dissolve.py  merit_detailed.py  raster_plots.py
scratchpad/bug-reports/: basins-level2-hardcoded-path.md  basins-shapefile-path-hardcoded.md  gdrive-bugfix1-unzipped-files.md  gdrive-download-path-mismatch.md  geopandas-sjoin-index-right-breaking-change.md  no-output-written-during-batch-run.md  single-point-bbox-error.md  validate-basin-codes-return-value-mishandled.md
scratchpad/feature-requests/: resume-batch-processing.md  virtual-gauges-integration.md
scripts/: data_interface.py  merge_watersheds.py  verify_basin_coverage.py
src/delineator/: __init__.py
src/delineator/api/: __init__.py  cache.py  deps.py  doc.md  exceptions.py  export.py  logging_config.py  main.py  models.py  routes.py
src/delineator/cli/: __init__.py  doc.md  main.py  output.py
src/delineator/config/: __init__.py  defaults.py  doc.md  schema.py
src/delineator/core/: __init__.py  country.py  data_check.py  (+5 more)
tasks/: prd-delineator-api.md  prd-virtual-gauges-integration.md  prd-watershed-export.md  progress-delineator-api.txt  progress-virtual-gauges-integration.txt  progress-watershed-export.txt
tests/: EXAMPLE_TEST.md  INDEX.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_download.py
tests/api/: conftest.py  test_cache.py  test_cors.py  test_export.py  test_export_service.py  test_models.py  test_routes.py
tests/config/: test_schema.py
tests/core/: __init__.py  conftest.py  test_country.py  test_data_check.py  test_delineate.py  test_dissolve.py  test_merit.py  test_output_writer.py
tests/download/: test_basin_selector.py  test_gdrive_client.py
(+6 files in other folders)
