[project]
name = "delineator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
    "pysheds>=0.5",
    "shapely>=2.1.2",
    "sigfig>=1.3.19",
]
