[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "delineator"
version = "0.1.0"
description = "Watershed delineation using MERIT-Hydro data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "httpx>=0.27",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pydantic>=2.0.0",
    "pyproj>=3.7.2",
    "pysheds>=0.5",
    "reverse-geocoder>=1.5",
    "rich>=13.0.0",
    "shapely>=2.1.2",
    "sigfig>=1.3.19",
    "tqdm>=4.66",
    "typer>=0.12",
]

[project.scripts]
delineator = "delineator.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3",       # tests
    "pytest-cov>=6.2.1",
    "ruff>=0.12",        # linter + formatter
]

# -----------------------
# Ruff (lint + format)
# -----------------------
[tool.ruff]
line-length = 120
target-version = "py312"


[tool.ruff.lint]
# Errors, warnings, naming, imports, modern py, bugbear, comprehensions, simplify
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501", # let formatter handle wrapping
    "N803", # allow X, Y for ML-style params
    "N806", # allow X, Y for local vars
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# -----------------------
# Pytest
# -----------------------
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--ignore=notebooks/",
    "--ignore=experiments/",
]
